Use supervisord for Graylog and consul-template